# sead-ctf-pastebin

./: .env  Cargo.toml  Rocket.toml  create_db.sh
src/: main.rs
static/: index.html
